--- a/fe_StudyWithCJ/src/assets/styles/Header.scss
+++ b/fe_StudyWithCJ/src/assets/styles/Header.scss
@@ -11,3 +11,9 @@
     color: #000 !important;
     border-color: #fff;
 }
+
+.navbar {
+    background-color: #22333B;
+    border-radius: 10px;
+    color: white !important;
+}
