--- a/fe_StudyWithCJ/src/assets/styles/home.scss
+++ b/fe_StudyWithCJ/src/assets/styles/home.scss
@@ -6,8 +6,9 @@ body {
 }
 
 .hero {
-  background: linear-gradient(to right, #92aeca, #e3f2fd);
+  background: linear-gradient(to right, #DDEB9D, #e3f2fd);
   border-radius: 20px;
+  color: #03251b;
 }
 
 img {
@@ -106,61 +107,68 @@ img {
   }
 }
 
-.grid-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: 120px;
-  gap: 16px;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-  /* margin-top: 100px; */
-}
+.home-layout {
+  .grid-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: 120px;
+    gap: 16px;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    /* margin-top: 100px; */
+  }
 
-.grid-item {
-  background-color: #1a1a1a;
-  color: white;
-  border-radius: 12px;
-  padding: 16px;
-  font-size: 24px;
-}
+  .grid-item {
+    background-color: #1a1a1a;
+    color: white;
+    border-radius: 12px;
+    padding: 16px;
+    font-size: 24px;
+  }
 
-/* Tuỳ chỉnh size từng item theo hàng/cột */
-.item-1 {
-  grid-row: span 2;
-}
+  /* Tuỳ chỉnh size từng item theo hàng/cột */
+  .item-1 {
+    grid-row: span 2;
+  }
 
-.item-2 {
-  grid-column: span 2;
-}
+  .item-2 {
+    grid-column: span 2;
+  }
 
-.item-3 {
-  grid-row: span 1;
-}
+  .item-3 {
+    grid-row: span 1;
+  }
 
-.item-4 {
-  grid-column: span 1;
-  grid-row: span 2;
-}
+  .item-4 {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
 
-.item-5 {
-  grid-column: span 1;
-  grid-row: span 1;
-}
+  .item-5 {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
 
-.item-6 {
-  grid-column: span 2;
-  grid-row: span 2;
-}
+  .item-6 {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
 
-.item-7 {
-  grid-column: span 1;
-  grid-row: span 1;
-}
+  .item-7 {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
 
-.item-8 {
-  grid-column: span 1;
-  grid-row: span 1;
+  .item-8 {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+
+  .item-9 {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
 }
 
 .video-wrapper {
